# LT-rust

./: .gitignore  Cargo.toml  README.md  landtrendr.pyi  pyproject.toml
.github/workflows/: release.yml
idl-harness/: README.md  f_test1.pro  regress.pro
python/: ablate.py  bench_idl_vs_rust.py  compare.py  compare_maps.py  fetch_nbr.py  gee_dist_map.py  gee_truth.py  idl_arid_rootcause.py  idl_compare.py  idl_cropland_spotcheck.py  idl_env.py  idl_pixel_debug.py  idl_tape_diff.py  idl_vs_gee_vs_rust_map.py  make_dist_map.py  paper_compare.py  param_compare_fig.py  requirements.txt
src/: lib.rs  python.rs
tests/: regression.rs
