[package]
name = "lt-rust"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "LandTrendr temporal segmentation — standalone Rust port, validated against the original LandTrendr-IDL and native GEE."

[lib]
name = "lt_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
# abi3-py310: one wheel covers CPython >=3.10 (incl. 3.14), not one per version.
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"], optional = true }
numpy = { version = "0.28", optional = true }

[profile.release]
opt-level = 3
lto = true
