[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "landtrendr"
version = "0.3.0"
description = "A Rust implementation of the LandTrendr temporal segmentation algorithm"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.maturin]
features = ["python"]
module-name = "landtrendr"
